@@ -3,5 +3,8 @@
 <p>
 <%= link_to 'Quais os serviços que mais faturaram no mês anterior?', :controller => "consultas", :action => "con4" %>
 </p>
+<p>
+<%= link_to 'Qual a taxa de ocupação do hotel na data X?', :controller => "consultas", :action => "con1" %>
+</p>
 
 <br />
