@@ -1,3 +1,7 @@
+2009-06-14 Iuri Fernandes <iurifq@gmail.com>
+* "Consulta 1" done
+* Created link in admin_menu
+
 2009-06-14 Suzana Matos <suzana.matos@gmail.com>
 * The client can sign up for his own
 	- TODO: the main page
